--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,23 @@
 # created by me for localscanner
- name: Scan with local scanner
- on:
-   push:
-     branches:
-       - 'main'
+name: Scan with local scanner
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - master
 
- permissions:
+permissions:
     contents: read
 
- jobs:
-   scan:
-     runs-on: ubuntu-latest
-     steps:
-       - uses: actions/checkout@v3
-       - uses: Contrast-Security-OSS/sast-local-scanner-action@v1.0.0
-         with:
-           apiUrl: ${{ secrets.CONTRAST__API__URL }}
-           apiUserName: ${{ secrets.CONTRAST__API__USER_NAME }}
-           apiKey: ${{ secrets.CONTRAST__API__API_KEY }}
-           apiServiceKey: ${{ secrets.CONTRAST__API__SERVICE_KEY }}
-           apiOrgId: ${{ secrets.CONTRAST__API__ORGANIZATION }}
+jobs:
+  scan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: Contrast-Security-OSS/sast-local-scanner-action@v1.0.0
+        with:
+          apiUrl: ${{ secrets.CONTRAST__API__URL }}
+          apiUserName: ${{ secrets.CONTRAST__API__USER_NAME }}
+          apiKey: ${{ secrets.CONTRAST__API__API_KEY }}
+          apiServiceKey: ${{ secrets.CONTRAST__API__SERVICE_KEY }}
+          apiOrgId: ${{ secrets.CONTRAST__API__ORGANIZATION }}
